# dt-plucked-interface

./: README.md
adafruit_drivers/: README.md  package.xml  setup.py
adafruit_drivers/include/Adafruit_I2C/: Adafruit_I2C.py
duckiebot_interface/: README.md
duckiebot_interface/launch/: duckie.launch
duckiebot_interface/misc/: 99-duckiebot.rules  setup.sh
duckietown_msgs/: CMakeLists.txt  README.md  package.xml
duckietown_msgs/msg/: LEDPattern.msg
hat_driver/: CMakeLists.txt  README.md
hat_driver/include/hat_driver/: motor.py  utils.py
led_driver/config/led_driver_node/: default.yaml
led_driver/launch/: led_driver_node.launch
led_driver/src/: led_driver_node.py
wheel_encoder/: setup.py
wheel_encoder/include/wheel_encoder/: wheel_encoder_driver.py
wheel_encoder/launch/: wheel_encoder_node.launch
wheel_encoder/src/: wheel_encoder_node.py
wheels_driver/: CMakeLists.txt  README.md  package.xml
wheels_driver/include/wheels_driver/: dagu_wheels_driver.py
wheels_driver/launch/: wheels_driver_node.launch
wheels_driver/src/: wheels_driver_node.py
